Bug 465539 - Weird duplicate calendar events
Summary: Weird duplicate calendar events
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Calendar widget (other bugs)
Version First Reported In: 5.26.5
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-10 10:38 UTC by Daniel Duris
Modified: 2023-02-15 03:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.1
Sentry Crash Report:


Attachments
Weird duplicate calendar events (209.04 KB, image/png)
2023-02-10 10:38 UTC, Daniel Duris
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Duris 2023-02-10 10:38:47 UTC
Created attachment 156123 [details]
Weird duplicate calendar events

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open calendar


OBSERVED RESULT
Duplicate events

EXPECTED RESULT
Non-duplicated events

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.26
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 5.15.0-58-generic (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-02-12 17:35:02 UTC
Do you have the Astronomical Events calendar enabled, as well as at least one Holiday calendar?

Reminds me of Bug 445324 but that was supposedly fixed. Or maybe we never actually adopted the new function...
Comment 2 Nate Graham 2023-02-12 17:35:40 UTC
Yep, that's it. We never started using the new function that omits Astro events in the Holidays calendar plugin! Will fix.
Comment 3 Bug Janitor Service 2023-02-12 17:41:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2613
Comment 4 Nate Graham 2023-02-15 00:33:00 UTC
Git commit 16aca7fc29d28b98728809101bdfccc424c8cff6 by Nate Graham.
Committed on 14/02/2023 at 21:18.
Pushed by ngraham into branch 'master'.

plasmacalendarintegration: Omit astronomical events from Holidays data

These events aren't holidays, and because they're currently shown by the
Holidays plugin, they get duplicated when you also have the Astronomical
Events plugin enabled. It makes sense that if you want to see
astronomical events, you'd use the Astronomical Events plugin, so let's
not show those events in the Holidays plugin.
FIXED-IN: 5.27.1

M  +1    -1    plasmacalendarintegration/holidaysevents.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/16aca7fc29d28b98728809101bdfccc424c8cff6
Comment 5 Nate Graham 2023-02-15 01:50:30 UTC
Git commit 09f00b67268081dd8dd27d2d5c074a3f3580bcc8 by Nate Graham.
Committed on 15/02/2023 at 01:50.
Pushed by ngraham into branch 'cherry-pick-16aca7fc'.

plasmacalendarintegration: Omit astronomical events from Holidays data

These events aren't holidays, and because they're currently shown by the
Holidays plugin, they get duplicated when you also have the Astronomical
Events plugin enabled. It makes sense that if you want to see
astronomical events, you'd use the Astronomical Events plugin, so let's
not show those events in the Holidays plugin.
FIXED-IN: 5.27.1


(cherry picked from commit 16aca7fc29d28b98728809101bdfccc424c8cff6)

M  +1    -1    plasmacalendarintegration/holidaysevents.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/09f00b67268081dd8dd27d2d5c074a3f3580bcc8
Comment 6 Nate Graham 2023-02-15 03:49:13 UTC
Git commit 2a6f08ad25e75f9d2e01387b3d7e88a84def4669 by Nate Graham.
Committed on 15/02/2023 at 03:48.
Pushed by ngraham into branch 'Plasma/5.27'.

plasmacalendarintegration: Omit astronomical events from Holidays data

These events aren't holidays, and because they're currently shown by the
Holidays plugin, they get duplicated when you also have the Astronomical
Events plugin enabled. It makes sense that if you want to see
astronomical events, you'd use the Astronomical Events plugin, so let's
not show those events in the Holidays plugin.
FIXED-IN: 5.27.1
(cherry picked from commit 16aca7fc29d28b98728809101bdfccc424c8cff6)

M  +1    -1    plasmacalendarintegration/holidaysevents.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/2a6f08ad25e75f9d2e01387b3d7e88a84def4669