plasmacalendarintegration: Omit astronomical events from Holidays data

These events aren't holidays, and because they're currently shown by the
Holidays plugin, they get duplicated when you also have the Astronomical
Events plugin enabled. It makes sense that if you want to see
astronomical events, you'd use the Astronomical Events plugin, so let's
not show those events in the Holidays plugin.

BUG: 465539
FIXED-IN: 5.27.1


(cherry picked from commit 16aca7fc29d28b98728809101bdfccc424c8cff6)